install/aks/app-gateway-ingress-controller/deploy/ingress-with-tls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - silvios-dev.eastus2.cloudapp.azure.com
    secretName: httpbin-tls
  rules:
  - http:
      paths:
      - backend:
          serviceName: httpbin
          servicePort: 80
